--- a/css/creative.css
+++ b/css/creative.css
@@ -161,7 +161,7 @@ sup {
 }
 
 a {
-  color: #f4623a;
+  color: #343a40;
   text-decoration: none;
   background-color: transparent;
 }
@@ -2615,14 +2615,14 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #f4623a;
-  border-color: #f4623a;
+  background-color: #343a40;
+  border-color: #343a40;
 }
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #f24516;
-  border-color: #ee3e0d;
+  background-color: #708090;
+  border-color: #343a40;
 }
 
 .btn-primary:focus, .btn-primary.focus {
@@ -6916,7 +6916,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #f4623a !important;
+  background-color: #343a40 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -10373,7 +10373,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #f4623a !important;
+  color: #708090 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -10574,7 +10574,7 @@ html {
 hr.divider {
   max-width: 3.25rem;
   border-width: 0.2rem;
-  border-color: #f4623a;
+  border-color: #343a40;
 }
 
 hr.light {
