updates to font and icons in contact section

--- a/css/creative.css
+++ b/css/creative.css
@@ -10378,7 +10378,7 @@ button.bg-dark:focus {
 }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #d6370c !important;
+  color: #2b2827 !important;
 }
 
 .text-secondary {
