--- a/css/creative.css
+++ b/css/creative.css
@@ -487,8 +487,8 @@ mark,
 }
 
 .img-fluid {
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  height: 200px;
 }
 
 .img-thumbnail {
@@ -4876,13 +4876,17 @@ input[type="button"].btn-block {
   word-wrap: break-word;
   background-color: #fff;
   background-clip: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.125);
+  border: 1px solid transparent;
   border-radius: 0.25rem;
+  width: 300px;
+  height: 200px;
 }
 
 .card > hr {
   margin-right: 0;
   margin-left: 0;
+  width: 300px;
+  height: 200px;
 }
 
 .card > .list-group:first-child .list-group-item:first-child {
@@ -4900,6 +4904,8 @@ input[type="button"].btn-block {
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
   padding: 1.25rem;
+  width: 300px;
+  height: 200px;
 }
 
 .card-title {
@@ -4917,18 +4923,22 @@ input[type="button"].btn-block {
 
 .card-link:hover {
   text-align: center;
-  opacity: 0;
-  color: #fff;
-  background: rgba(244, 98, 58, 0.9);
+  opacity: 10;
+  color: white;
+  background: transparent;
   -webkit-transition: opacity 0.25s ease;
   transition: opacity 0.25s ease;
   /*text-decoration: none;*/
-  border-color: #647a72;
-  /*background-color: #647a72;*/
+  border-color: black;
+  background-color: white;
+  width: 300px;
+  height: 200px;
 }
 
 .card-link + .card-link {
   margin-left: 1.25rem;
+  width: 300px;
+  height: 200px;
 }
 
 .card-header {
@@ -4978,7 +4988,9 @@ input[type="button"].btn-block {
 }
 
 .card-img {
-  width: 100%;
+  width: 300px;
+  height: 200px;
+  padding: 40px;
   border-radius: calc(0.25rem - 1px);
 }
 
@@ -10802,8 +10814,8 @@ header.masthead h1 {
 
 #portfolio .container-fluid .portfolio-box .portfolio-box-caption .project-category {
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 0.85rem;
-  font-weight: 600;
+  font-size: 0;
+  font-weight: 0;
   text-transform: uppercase;
 }
 
